--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,11 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
-# tell architectury loom that this project is a forge project.
-# this will enable us to use the "forge" dependency.
-# using archloom without this is possible and will give you a
-# "standard" loom installation with some extra features.
 loom.platform=forge
+minecraft_version=1.20.1
+forge_version=1.20.1-47.2.1
+yarn_mappings=1.20.1+build.10
 
-# Base properties
-    # minecraft version
-    minecraft_version=1.20.1
-    # forge version, latest version can be found on https://files.minecraftforge.net/
-    forge_version=1.20.1-47.2.1
-    # yarn, latest version can be found on https://fabricmc.net/develop/
-    yarn_mappings=1.20.1+build.10
-
-# Mod Properties
-    mod_version=1.0.0
-    maven_group=dev.footer.gutils
-    archives_base_name=GUtils
-    mod_id=gutils
-    mod_author=FooterMan
+mod_version=1.0.0-20.1
+maven_group=dev.footer.gutils
+archives_base_name=GUtils
+mod_id=gutils
+mod_author=FooterMan
