--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,23 @@
 org.gradle.jvmargs=-Xmx1G
-loom.platform=forge
-minecraft_version=1.20.1
-forge_version=1.20.1-47.2.1
-yarn_mappings=1.20.1+build.10
+org.gradle.daemon=false
+org.gradle.debug=false
+
+minecraft_version=1.20.2
+minecraft_version_range=[1.20.2,1.21)
+neo_version=20.2.86
+neo_version_range=[20.2,)
+loader_version_range=[1,)
 
 mod_version=1.0.0-20.1
+
 maven_group=dev.footer.gutils
 archives_base_name=GUtils
 mod_id=gutils
-mod_author=FooterMan
+mod_name=General Utilities
+
+mod_license=GPL-3.0
+mod_authors=FooterMan
+
+mod_description=Includes useful commands for Mod/ModPack Developers.
+
+pack_format_number=18
