--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,46 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'net.neoforged.gradle.userdev' version '7.0.57'
+    id "me.shedaniel.unified-publishing" version "0.1.+"
 }
 
 version = mod_version
 group = maven_group
+
+unifiedPublishing {
+    project {
+        Properties properties = new Properties()
+        def env = rootProject.file('local.properties')
+        properties.load(env.newDataInputStream())
+        def cfToken = properties.getProperty('cf')
+        def mrToken = properties.getProperty('mr')
+        var changelogFile = rootProject.file("changelog.md").text
+
+        releaseType = "release"
+        gameVersions = [minecraft_version]
+        gameLoaders = ["neoforge"]
+        displayName = "$mod_version - Neo"
+        changelog = changelogFile
+        mainPublication jar
+
+        if (cfToken != null) {
+            curseforge {
+                token = cfToken
+                id = "998288"
+                changelog = changelogFile
+            }
+        }
+
+        if (mrToken != null) {
+            modrinth {
+                token = mrToken
+                id = "oLJzFcL4"
+                version = mod_version
+                changelog = changelogFile
+            }
+        }
+    }
+}
 
 repositories {
     mavenLocal()
@@ -66,17 +102,18 @@ tasks.withType(ProcessResources).configureEach {
     }
 }
 
-// Example configuration to allow publishing using the maven-publish plugin
-publishing {
-    publications {
-        register('mavenJava', MavenPublication) {
-            from components.java
-        }
-    }
-    repositories {
-        maven {
-            url "file://${project.projectDir}/repo"
-        }
+jar {
+    manifest {
+        attributes([
+                "Specification-Title"     : mod_id,
+                "Specification-Vendor"    : mod_authors,
+                "Specification-Version"   : "1",
+                "Implementation-Title"    : mod_name,
+                "Implementation-Version"  : mod_version,
+                "Implementation-Vendor"   : mod_authors,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                //    "MixinConfigs"            : "${modid}.mixins.json"
+        ])
     }
 }
 
