--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
 org.gradle.debug=false
 
-minecraft_version=1.20.2
-minecraft_version_range=[1.20.2,1.21)
-neo_version=20.2.86
-neo_version_range=[20.2,)
+minecraft_version=1.20.5
+minecraft_version_range=[1.20.5,1.21)
+neo_version=20.5.0-beta
+neo_version_range=[25,)
 loader_version_range=[1,)
 
-mod_version=1.1.0-20.2
+mod_version=1.1.0-20.5
 
 maven_group=dev.footer.gutils
 archives_base_name=GUtils
