--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,9 @@ pluginManagement {
         maven { url "https://maven.architectury.dev/" }
         maven { url "https://files.minecraftforge.net/maven/" }
         maven { url = 'https://maven.neoforged.net/releases' }
+        maven {
+            url "https://maven.firstdark.dev/snapshots"
+        }
         gradlePluginPortal()
     }
 }
