--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.daemon=false
 org.gradle.debug=false
 
 minecraft_version=1.20.6
-minecraft_version_range=[1.20.6,1.21)
-neo_version=20.6.4-beta
-neo_version_range=[25,)
+minecraft_version_range=[1.20.6,1.20.5)
+neo_version=20.6.40-beta
+neo_version_range=[20,)
 loader_version_range=[1,)
 
-mod_version=1.1.0-20.6
+mod_version=2.0.0-20.6
 
 maven_group=dev.footer.gutils
 archives_base_name=GUtils
@@ -21,3 +21,7 @@ mod_authors=FooterMan
 mod_description=Includes useful commands for Mod/ModPack Developers.
 
 pack_format_number=18
+
+rei_version=15.0.728
+cloth_ver=14.0.126
+arch_ver=12.0.27
