Update license to LGPL Update to Minecraft 1.21 Update Neo version range Bump mod version to 2.1 Update Pack number to 34

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,26 +2,26 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
 org.gradle.debug=false
 
-minecraft_version=1.20.6
-minecraft_version_range=[1.20.6,1.20.5)
+minecraft_version=1.21.0
+minecraft_version_range=[1.21.0)
 neo_version=21.0.0-beta
-neo_version_range=[20,)
+neo_version_range=[21,)
 loader_version_range=[1,)
 
-mod_version=2.0.0-20.6
+mod_version=2.1.0-21.0
 
 maven_group=dev.footer.gutils
 archives_base_name=GUtils
 mod_id=gutils
 mod_name=General Utilities
 
-mod_license=GPL-3.0
+mod_license=LGPL-3.0
 mod_authors=FooterMan
 
 mod_description=Includes useful commands for Mod/ModPack Developers.
 
-pack_format_number=18
+pack_format_number=34
 
-rei_version=15.0.728
-cloth_ver=14.0.126
-arch_ver=12.0.27
+#rei_version=15.0.728
+#cloth_ver=14.0.126
+#arch_ver=12.0.27
